Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -250,14 +250,17 @@ textarea.form-control {
 	margin: 0px;
 	padding: 120px 0 100px;
 	background: #fff;
+	overflow-x: hidden;
 }
 
 .pfblock-gray {
 	background: #f5f5f5;
+	overflow-x: hidden;
 }
 
 .pfblock-image {
 	padding: 0;
+	overflow-x: hidden;
 }
 
 .pfblock-image,
@@ -312,6 +315,7 @@ textarea.form-control {
 /* ---------------------------------------------- */
 
 #home {
+	overflow-x: hidden;
 	/*background: url('../images/cover.jpg');*/
 	/*background-color: #222;*/
 /*	background-attachment: fixed;
@@ -325,6 +329,7 @@ textarea.form-control {
 }
 
 .home-overlay {
+	overflow-x: hidden;
     background-color: rgba(0, 0, 0, 0.3);
     background-repeat: repeat;
     height: 100%;
@@ -340,12 +345,13 @@ textarea.form-control {
 	z-index: -1000;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	overflow-x: hidden;
 	top: 0;
 	left: 0;
 }
 
 #video-bg-elem {
+	overflow-x: hidden;
 	position: fixed;
 	top: 0;
 	left: 0;
